2000-08-09  Juergen Vigna  <jug@sad.it>

	* src/insets/insettext.C (draw): small fix for clearing rectangle.

	* src/insets/insettabular.C: make drawing of single cell smarter.

2000-08-09  Marko Vendelin <markov@ioc.ee>
	* src/frontends/gnome/Menubar_pimpl.C
	* src/frontends/gnome/Menubar_pimpl.h: Gnome frontend Menubar
	implementation: new files
	
	* src/frontends/gnome/mainapp.C
	* src/frontends/gnome/mainapp.h: Gnome main window (temporary
	implementation)

	* src/main.C: create Gnome main window

	* src/frontends/xforms/Menubar_pimpl.h
	* src/frontends/Menubar.C
	* src/frontends/Menubar.h: added method Menubar::update that calls 
	Menubar_pimpl::update and xforms/Menubar_pimpl::update (empty one)

	* src/LyXView.C: calls Menubar::update to update the state
	of menu items

	* src/frontends/gnome/Makefile.am: added new files
	
	* src/frontends/Makefile.am: added frontend compiler options

2000-08-08  Juergen Vigna  <jug@sad.it>

	* src/lyx_cb.C (AutoSave): autosave for unnamed files enabled!

	* src/bufferlist.C (close): 
	* src/bufferlist.C (QwriteAll): remove Autosave-files for Unnamed()
	documents if exiting without saving.

	* src/buffer.C (save): use removeAutosaveFile()

	* src/support/filetools.C (removeAutosaveFile): new function.

	* src/lyx_cb.C (MenuWrite): returns a bool now.
	(MenuWriteAs): check if file could really be saved and revert to the
	old name if not.
	(MenuWriteAs): removing old autosavefile if existant.

	* src/frontends/xforms/FormRef.h: puting FD_form_ref declaration
	before Goto toggle declaration, because of compiler warning.

	* src/frontends/xforms/FormRef.C: forgot include of <algorithm>

	* src/lyxfunc.C (MenuNew): small fix.

	* src/lyxrc.C (output): added RC_NEW_ASK_FILENAME tag.

	* src/bufferlist.C (newFile):
	* src/lyxfunc.C (MenuNew): use the new_ask_filename tag from lyxrc.

	* src/lyxrc.C: added new_ask_filename tag

2000-08-07  Angus Leeming  <a.leeming@ic.ac.uk>

	* src/lyx.fd: removed code pertaining to form_ref