@@ -99,6 +99,7 @@ __SLOT__(R,[$1])
 CLASS_SLOT(ARGS(P,0))
 CLASS_SLOT(ARGS(P,1))
 CLASS_SLOT(ARGS(P,2))
+CLASS_SLOT(ARGS(P,3))
 
 #ifdef SIGC_CXX_NAMESPACES
 } // namespace
