@@ -114,6 +114,7 @@ ifelse($1,void,[dnl
 FUNCTION_SLOT(ARGS(P,0))
 FUNCTION_SLOT(ARGS(P,1))
 FUNCTION_SLOT(ARGS(P,2))
+FUNCTION_SLOT(ARGS(P,3))
 
 #ifdef SIGC_CXX_NAMESPACES
 } // namespace
