@@ -148,6 +148,7 @@ struct [AdaptorRetBindSlot]NUM($2): public AdaptorSlot_
 ADAPTOR_RETBIND_SLOT(ARGS(P,0))
 ADAPTOR_RETBIND_SLOT(ARGS(P,1))
 ADAPTOR_RETBIND_SLOT(ARGS(P,2))
+ADAPTOR_RETBIND_SLOT(ARGS(P,3))
 
 #ifdef SIGC_CXX_NAMESPACES
 } // namespace
