@@ -136,6 +136,7 @@ ifelse($1,void,[dnl
 ADAPTOR_RETTYPE_SLOT(ARGS(P,0))
 ADAPTOR_RETTYPE_SLOT(ARGS(P,1))
 ADAPTOR_RETTYPE_SLOT(ARGS(P,2))
+ADAPTOR_RETTYPE_SLOT(ARGS(P,3))
 
 #ifdef SIGC_CXX_NAMESPACES
 } // namespace
